# clickup-work

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml
.github/workflows/: publish.yml
clickup_work/: __main__.py  actions_screen.py  claude.py  cli.py  clickup.py  config.py  git.py  log.py  picker.py  plan_screen.py  post_flow.py  spinner.py  themes.py  tui.py  workload.py
docs/: flow.md
