[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-work"
version = "0.21.0"
description = "Pick the next ClickUp ticket and start a Claude Code session on it. One command from terminal to PR."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Azhar" }]
license = { file = "LICENSE" }
keywords = ["clickup", "claude-code", "claude", "cli", "developer-tools", "automation", "ticket", "pull-request"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    # textual powers the workload TUI (clickup-work workload). Plain-text
    # output paths still run when stdout isn't a TTY or --no-tui is passed,
    # but textual is needed for the default interactive experience.
    "textual>=0.80",
]

[project.urls]
Homepage      = "https://github.com/Azhar-ud/clickup-work"
Repository    = "https://github.com/Azhar-ud/clickup-work"
Issues        = "https://github.com/Azhar-ud/clickup-work/issues"
Changelog     = "https://github.com/Azhar-ud/clickup-work/releases"

[project.scripts]
clickup-work = "clickup_work.cli:main"

[tool.setuptools.packages.find]
include = ["clickup_work*"]
